# Image-Kernel-Processing_Sequential

./: CMakeLists.txt  Image.c  Image.h  Kernel.c  Kernel.h  Processing.c  Processing.h  README.md  Utils.c  Utils.h  main.c
Image/Output/Times/: 4KExecTimes.txt  5KExecTimes.txt  6KExecTimes.txt  7KExecTimes.txt  8KExecTimes.txt
